# FlightComputer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Channel.hpp  ChannelMultiplexer.hpp  Dockerfile  Filter.hpp  InputChannel.hpp  Logger.hpp  MultipleOutputChannel.hpp  Node.hpp  OutputChannel.hpp  README.md  ThreadModule.hpp  constants.hpp  install.sh  main.cpp
DBusPlot/: DBusPlot.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Devices/: RcLibSimulator.cpp  RcLibSimulator.hpp  Serial.cpp  Serial.hpp  SerialSimulator.cpp  SerialSimulator.hpp
Devices/FlightController/: FlightController.cpp  FlightController.hpp
Devices/GPS/: Gps.cpp  Gps.hpp  GpsDebug.cpp  GpsDebug.hpp  GpsMeasurement_t.hpp  GpsSimulator.cpp  GpsSimulator.hpp  Gps_t.hpp  gps_t.hpp
Devices/GPS/Node/: Gps.cpp  Gps.hpp
Devices/GPS/Sim/: GpsSimulator.cpp  GpsSimulator.hpp
Devices/GPS/Type/: GpsMeasurement_t.cpp  GpsMeasurement_t.hpp  Gps_t.hpp
Devices/LoRa/: LoRa.cpp  LoRa.hpp  LoRaHal.cpp  LoRaHal.h
Devices/Network/: Network.cpp  Network.hpp
Devices/SRF02/: SRF02.cpp  SRF02.hpp
Devices/SRF02/Node/: SRF02.cpp  SRF02.hpp
Devices/SRF02/Sim/: SRF02Sim.cpp  SRF02Sim.hpp
Devices/Serial/: Serial.cpp  Serial.hpp  SerialDriver.cpp  SerialDriver.hpp  SerialPosix.cpp  SerialPosix.hpp
Devices/Stream/: StreamDevice.cpp  StreamDevice.hpp
Devices/Stream/Serial/: Serial.cpp  Serial.hpp
Devices/Stream/Tcp/: TcpServer.cpp  TcpServer.hpp
Devices/rcLib/: PackageExtended.hpp  PackageOstream.cpp  PackageOstream.hpp  PackageUtil.cpp  PackageUtil.hpp  RcLibSimulator.cpp  RcLibSimulator.hpp
Filters/FeedbackControl/: Control_t.hpp  FeedbackControl.cpp  FeedbackControl.hpp
Filters/FeedbackControl/Node/: FeedbackControl.cpp  FeedbackControl.hpp
Filters/FeedbackControl/Type/: Control_t.hpp
Filters/Fusion/: Fusion.cpp  Fusion.hpp  State_t.hpp
Filters/Fusion/Lib/: AlphaBetaTracker.hpp  Calibration.cpp  Calibration.hpp  DecodePackage.hpp  StateEstimate.cpp  StateEstimate.hpp  StateEstimateParticleFilter.cpp  StateEstimateParticleFilter.hpp  config.h  random_util.c  random_util.h  system.c  system.h
Filters/Fusion/Node/: Fusion.cpp  Fusion.hpp
Filters/Fusion/Type/: State_t.hpp
Filters/MeshManager/: MeshManager.cpp  MeshManager.hpp
Filters/MessageCoding/Lib/: MessageConversion.hpp
Filters/MessageCoding/Node/: MessageDecoding.hpp  MessageEncoding.hpp
Filters/Navigation/: Nav_t.hpp  Navigation.cpp  Navigation.hpp  WaypointReader.cpp  WaypointReader.hpp  Waypoint_t.hpp
Filters/Navigation/Node/: Navigation.cpp  Navigation.hpp
Filters/Navigation/Type/: Nav_t.hpp  Waypoint_t.cpp  Waypoint_t.hpp
Filters/OutputFilter/: OutputFilter.cpp  OutputFilter.hpp  OutputTypes.hpp
FlightComputerSerial/: FlightComputerSerial.pro  main.cpp  serial.cpp  serial.h
Framework/: InputChannel.hpp  Node.hpp  OutputChannel.hpp
Fusion/: Fusion.cpp  Fusion.hpp  FusionDebug.cpp  FusionDebug.hpp
LoRa/: Makefile  rf95_server  rf95_server.cpp
LoRaDbus/: LoRaDbus  LoRaDbus.pro  LoRaHal.cpp  LoRaHal.h  lorahal.cpp  lorahal.h  main.cpp
LoRaDesktop/: LoRaDesktop.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
MeshManager/: MeshManager.cpp  MeshManager.hpp
Navigation/: Navigation.cpp  Navigation.hpp
RcLibMonitor/: Makefile  RcLibMonitor  RcLibMonitor.pro  main.cpp  mainwindow.cpp  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
RcLibPlot/: RcLibPlot.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Scripts/: graph.py  graph.sh  install.sh
Serial/: RcLibDebug.cpp  RcLibDebug.hpp  RcLibLogger.cpp  RcLibLogger.hpp  Serial.cpp  Serial.hpp  SerialSimulator.cpp  SerialSimulator.hpp
SerialReplay/: SerialReplay.pro  main.cpp  main.cpp.autosave
Utilities/: ChannelRecorder.hpp  ChannelReplay.hpp  Logger.hpp  Si.hpp  time.cpp  time.hpp
Utilities/Recording/: ChannelRecorder.hpp  ChannelReplay.hpp  NameProvider.cpp  NameProvider.hpp  Serialization.hpp
Utilities/Si/: Si.hpp  SiBase.hpp  SiExtended.hpp  SiLiterals.hpp  SiStl.hpp
build-FlightComputerSerial-Desktop-Debug/: FlightComputerSerial  Makefile  moc_serial.cpp
build-LoRaDesktop-Desktop-Debug/: LoRaDesktop  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
logs/: nmea.txt
scripts/: autostart.sh  graph.py  graph.sh  install.sh  launch.sh
serialDbus/: main.go
serialDbus/cmd/: root.go
